# mupen64-rr-lua

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cliff.toml  vcpkg.json
.github/ISSUE_TEMPLATE/: 01_bug_report.yml
.github/workflows/: build.yml  check-format.yml  release-beta.yml  test.yml
.zed/: tasks.json
docs/: C-API-MIGRATION.md
src/: Plugins.Common.cmake
src/Common/include/: CommonPCH.h  MiscHelpers.h  VersionNameHelpers.h
src/Core/: Core.cpp
src/Core/include/: core_api.h  core_types.h
src/Core/memory/: memory.cpp  pif.cpp  savestates.cpp
src/Core/r4300/: Debug.cpp  Debug.h  disasm.cpp  disasm.h  interrupt.cpp  pure_interp.cpp  r4300.cpp  r4300.h  timers.cpp  timers.h  vcr.cpp
src/Lua/: api.lua  shims.lua
src/Plugins.Win32.DummyAudio/: CMakeLists.txt
src/Plugins.Win32.DummyInput/: CMakeLists.txt
src/Plugins.Win32.DummyRSP/: CMakeLists.txt
src/Plugins.Win32.TASAudio/: CMakeLists.txt  Config.cpp  Config.hpp  Config_Win32.cpp  Config_Win32.hpp  Main.cpp  Main.hpp  Main_Win32.cpp  Main_Win32.hpp  Resource.h  Resource.rc  SDLBackend.cpp  SDLBackend.hpp
src/Plugins.Win32.TASInput/: Resource.rc
src/Plugins.Win32.TASRSP/: CMakeLists.txt  MP3.cpp  Resource.rc  UCode1.cpp
src/Plugins.Win32.TASVideo/: CMakeLists.txt  Combiner.cpp  Combiner.h  Config.cpp  FrameBuffer.cpp  OpenGL.cpp  OpenGL.h  RSP.cpp  RSP.h  Resource.rc  Textures.cpp  convert.h  gDP.cpp  glN64.cpp  resource.h  unified_combiner.cpp  unified_combiner.h
src/Views.Win32/: CMakeLists.txt  Config.cpp  Config.h  DialogService.cpp  Main.cpp  Main.h  Messenger.h  Plugin.cpp  Plugin.h  Resource.rc  ViewHelpers.h  resource.h  stdafx.h
src/Views.Win32/capture/: CaptureManager.cpp  CaptureManager.h
src/Views.Win32/capture/encoders/: Encoder.h  FFmpegEncoder.cpp  FFmpegEncoder.h  VFWEncoder.cpp  VFWEncoder.h
src/Views.Win32/components/: AppActions.cpp  Cheats.cpp  CommandPalette.cpp  ConfigDialog.cpp  Dispatcher.cpp  Dispatcher.h  FilePicker.cpp  LuaDialog.cpp  MGECompositor.cpp  MGECompositor.h  MovieDialog.cpp  ParameterPalette.cpp  PianoRoll.cpp  RomBrowser.cpp  Seeker.cpp  SettingsListView.cpp
src/Views.Win32/include/Views.Win32/: ViewPlugin.h
src/Views.Win32/lua/: LuaCallbacks.cpp  LuaCallbacks.h  LuaManager.cpp  LuaManager.h  LuaRegistry.cpp  LuaRenderer.cpp  LuaRenderer.h  LuaTypes.h
src/Views.Win32/lua/modules/: D2D.h  Debugger.h  Emu.h  Joypad.h
src/Views.Win32/lua/presenters/: GDIPresenter.cpp
src/Website/src/routes/: +page.svelte
src/Website/src/routes/stroop/: +page.svelte
src/Website/src/routes/ugui/: +page.svelte
src/Website/static/docs/lua/: index-no-min.html  index.html
src/Website/static/docs/win/: 1. Getting-Started.md
test/Core.Tests/: CMakeLists.txt  vcr_tests.cpp
test/lua/: tests.lua
test/lua/manual/: d2d_drawimage2_tint.lua  debugger.lua  empty.lua
toolchains/: vcpkg-win64.cmake
